fixed CSS media queries for title spacing

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ p {
   align-items: center;
   flex-wrap: wrap;
   height: calc(100% - 32px);
-  padding-top: 10px;
+  padding-top: 0;
 }
 .photo {
 }
@@ -253,7 +253,7 @@ input[type="range"]::-webkit-slider-thumb,
 
 @media (min-height: 450px) and (orientation: landscape) {
   header {
-    height: 50px;
+    height: 80px;
   }
 
   h2 {
